--- a/view/login.html
+++ b/view/login.html
@@ -1,8 +1,8 @@
 <section class="container">
   <form class="login-form" ng-submit="enviar()">
-    <input ng-model="user.email" class="form-control input-lg" type="email"    placeholder="email">
-    <input ng-model="user.pass" class="form-control input-lg"  type="password" placeholder="senha">
+    <input ng-model="email" class="form-control input-lg" type="email"    placeholder="email">
+    <input ng-model="pass" class="form-control input-lg"  type="password" placeholder="senha">
 
-    <input type="submit" id="submit" class="btn btn-success btn-lg btn-block" value="LogIn">
+    <button type="submit" id="submit" class="btn btn-success btn-lg btn-block">Entrar</button>
   </form>
 </section>
