--- a/view/perfil.html
+++ b/view/perfil.html
@@ -1,10 +1,10 @@
 <section class="container">
   <div class="text-center">
-    <img class="img-circle" src="{{ info.thumb }}" alt="{{ info.name }}" width="120" height="120">
-    <h2>{{ info.name }}</h2>
-    <p>Endereço: <strong>{{ info.address }}</strong></p>
-    <p>Profissão: <strong>{{ info.job }}</strong></p>
-    <p>Idade: <strong>{{ info.age }} anos</strong></p>
+    <img class="img-circle" src="{{ user.thumb }}" alt="{{ user.name }}" width="120" height="120">
+    <h2>{{ user.name }}</h2>
+    <p>Endereço: <strong>{{ user.address }}</strong></p>
+    <p>Profissão: <strong>{{ user.job }}</strong></p>
+    <p>Idade: <strong>{{ user.age }} anos</strong></p>
 
     <a ng-href="{{ back }}" class="btn btn-success btn-lg btn-block">Voltar</a>
   </div>
